<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/srl_random"
    android:layout_height="match_parent"
    tools:context=".fragments.NotificationsFragment">

<ScrollView
    android:id="@+id/rl_dish_detail_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context=".fragments.DishDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_dish_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_dish_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/dish_image_background"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:padding="6dp"
                android:background="@drawable/favorite_button_background"
                >

                <ImageView
                    android:id="@+id/iv_favorite_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_baseline_favorite_border_24" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_dish_image"
            android:layout_margin="10dp"
            android:textColor="@color/blue_grey_900"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Dish Title" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/grey_900"
            android:textSize="16sp"
            tools:text="Type" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/grey_900"
            android:textSize="14sp"
            tools:text="Category" />

        <TextView
            android:id="@+id/tv_ingredients_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_category"
            android:layout_margin="10dp"
            android:text="@string/lbl_ingredients"
            android:textSize="16sp"
            android:textColor="@color/blue_grey_900"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_900"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/tv_ingredients_label"
            android:textSize="16sp"
            tools:text="Ingredients Value" />

        <TextView
            android:id="@+id/tv_cooking_direction_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ingredients"
            android:layout_margin="10dp"
            android:text="@string/lbl_direction_to_cook"
            android:textSize="18sp"
            android:textColor="@color/blue_grey_900"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cooking_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_900"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/tv_cooking_direction_label"
            android:textSize="14sp"
            tools:text="Ingredients Value" />

        <TextView
            android:id="@+id/tv_cooking_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cooking_direction"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/blue_grey_900"
            android:fontFamily="@font/alegreya_sans_sc_medium_italic"
            tools:text="@string/lbl_estimate_cooking_time" />
    </RelativeLayout>
</ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
